--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,19 +1,57 @@
 @use "../abstracts/variables" as var;
+@use "../base/typography" as typ;
 
-*,*::before,*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* Box sizing */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-ul,ol{
-    list-style: none;
+/* Remove default margins */
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
-a{
-    text-decoration: none;
-    color: inherit;
+
+/* Media elements behave predictably */
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
-img{
-    max-width: 100%;
-    display: block;
+
+/* Form elements inherit typography */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove default list styles */
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/* Links reset (style later in base/typography) */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* Buttons reset */
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
