--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/mixins" as mx;
 
 body{
-    background-color: var.$blue-dark;
+    background-color: var.$black;
 }
 .container {
   width: 100%;
