--- a/scss/layout/_heroe.scss
+++ b/scss/layout/_heroe.scss
@@ -1,2 +1,108 @@
-@use "../abstracts/mixins" as mx;
 @use "../abstracts/variables" as var;
+@use "../abstracts/mixins" as mx;
+@use "../base/typography" as typ;
+
+.heroe--container{
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    padding-block: 16px;
+    gap: 10px;    
+    .heroe--card{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        padding-inline: 16px;
+        gap: 16px;
+        h2{            
+            color: var.$color-primary;
+            .master{
+                color: var.$yellow;
+            }
+            .conquerblocks{
+                color: var.$yellow;
+            }
+        }
+        p{
+            color: var.$color-primary;
+        }
+        .buttons--container{
+            display: flex;
+            gap: 16px;
+            justify-content: center;
+            .btn--primary {
+                @include mx.btn-primary;
+            }
+        }
+    }
+    .heroe--image{
+        align-self: center;
+        position: relative;
+        &::before{            
+            content: "";
+            position: absolute;
+            inset: -25%; // hace el glow más grande que el avatar
+            z-index: -1;
+            background: radial-gradient(
+                ellipse 15% 45% at 50% 40%,
+                rgba(244, 180, 0, 0.45) 0%,
+                rgba(244, 180, 0, 0.25) 30%,
+                rgba(244, 180, 0, 0.12) 50%,
+                rgba(244, 180, 0, 0.04) 65%,
+                rgba(244, 180, 0, 0) 75%
+            );
+            
+            filter: blur(18px);
+
+            transform: rotate(-20deg);
+            transform-origin: center;
+
+            pointer-events: none;       
+        }        
+    }
+    &::before{
+        content: "";        
+        position: absolute;
+        right: 0%;
+        top: 10%;
+        width: 100%;
+        height: 80%;
+        background-image: url("../../img/mobile/heroe_texture_mobile.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        z-index: -1;
+    }
+
+    /* Tablet */
+  @include mx.tablet {        
+    display: flex;
+    flex-direction: row;
+    width: 100%; 
+    &::before{
+            content: none;
+    }
+    .heroe--card{
+        width: 50%;
+        padding-block: 32px;
+        gap: 50px;        
+         &::before{
+            content: "";        
+            position: absolute;
+            inset: 0;            
+            background-image: url("../../img/tablet/heroe_texture_tablet.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            z-index: -1;
+            pointer-events: none; 
+        }
+    }            
+  }
+  
+  /* Desktop */
+  @include mx.desktop {    
+    
+  }
+}
