why-full responsive--DONE

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,8 +10,8 @@
 /*  LAYOUT  estructura general del sitio*/
 @use "../scss/layout/header";
 @use "../scss/layout/heroe";
-@use "../scss/layout/guide";
-@use "../scss/layout/location";
+@use "../scss/layout/course";
+@use "../scss/layout/why";
 @use "../scss/layout/footer";
 @use "../scss/layout/marketing";
 
