--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,7 @@
 @use "../scss/layout/course";
 @use "../scss/layout/why";
 @use "../scss/layout/footer";
-@use "../scss/layout/marketing";
+@use "../scss/layout/news";
 
 /*    COMPONENTS botones tarjetas etc*/
 @use "../scss/components/buttons";
