who_we_are-full responsive--DONE

--- a/css/style.scss
+++ b/css/style.scss
@@ -23,7 +23,7 @@
 
 /*    PAGES   estilos especificos para cada pagina*/
 @use "../scss/pages/home";
-@use "../scss/pages/about";
+@use "../scss/pages/who";
 @use "../scss/pages/contact";
 
 /*   THEMES    */
