courses-full responsive--DONE

--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,7 @@
 @use "../scss/pages/home";
 @use "../scss/pages/who";
 @use "../scss/pages/contact";
+@use "../scss/pages/courses_page";
 
 /*   THEMES    */
 @use "../scss/themes/dark";
