blog-full responsive--DONE

--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,7 @@
 @use "../scss/pages/who";
 @use "../scss/pages/contact";
 @use "../scss/pages/courses_page";
+@use "../scss/pages/blog";
 
 /*   THEMES    */
 @use "../scss/themes/dark";
