--- a/scss/pages/_courses_page.scss
+++ b/scss/pages/_courses_page.scss
@@ -88,6 +88,17 @@
     
     /* Desktop */
     @include mx.desktop {    
-    
+        .card--container{
+            .card{               
+                .generic--container{                    
+                    h3{
+                        font-size: 36px;
+                    }
+                    p{
+                        font-size: 24px;
+                    }
+                }
+            }
+        }
     }
 }
