--- a/css/style.scss
+++ b/css/style.scss
@@ -27,6 +27,7 @@
 @use "../scss/pages/contact";
 @use "../scss/pages/courses_page";
 @use "../scss/pages/blog";
+@use "../scss/pages/register";
 
 /*   THEMES    */
 @use "../scss/themes/dark";
