--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,7 @@
 @use "../scss/pages/courses_page";
 @use "../scss/pages/blog";
 @use "../scss/pages/register";
+@use "../scss/pages/login";
 
 /*   THEMES    */
 @use "../scss/themes/dark";
